revert jit to fix broken styles

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,3 +5,9 @@
 button:focus {
   outline: none;
 }
+
+
+h1 {
+    margin: 0;
+    line-height: 1.1em;
+  }
